wip: coming soon

--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Color palette
+#fc9e6b, #feb55c,##fb7f3b,#d53d07
+#fee8ce,#e04a00
+*/
+
+@font-face {
+	font-family: 'Abril Fatface';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/abrilfatface/v19/zOL64pLDlL1D99S8g8PtiKchq-dmjcDidBc.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/worksans/v18/QGYsz_wNahGAdqQ43Rh_fKDptfpA4Q.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+h1, h2, h3, h4, h5, h6, h7, h8, h9, .is-abril {
+	font-family: Abril Fatface;
+}
+
 .app {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	font-family: 'Work Sans';
 }
 
 main {
