feat: update favicon & readme

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,14 @@
 #fee8ce,#e04a00
 */
 
+/* Colours Jana
+#484349, #839788, #eee0cb, #3f84e5, #fe654f
+*/
+
+/* Colours Justyna
+#315D93, #817c52, #dacfc3, #fca806, #f27984
+*/
+
 @font-face {
 	font-family: 'Abril Fatface';
 	font-style: normal;
